<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!-- 뒤로가기 / 타이틀 / 더보기 메뉴 순으로 되어 있는 appbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainBlue"
            app:layout_collapseMode="pin"
            app:theme="@style/Toolbar">

            <TextView
                android:id="@+id/ToolbarTitle"
                style="@style/ToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/UserPage" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!--
        <TextView
            android:id="@+id/basic_txt"
            style="@style/activityCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="기본 목록" />
        <GridLayout
            android:id="@+id/chipGroup_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/basic"
                app:checkedIconTint="@color/clickBlue"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/self_care"
                style="@style/activityChip"/>
        </GridLayout>
        -->

        <TextView
            android:id="@+id/purpose_txt"
            style="@style/activityCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="여행 목적" />
        <GridLayout
            android:id="@+id/chipGroup_purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/job"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/medic"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/volunteer"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/camping"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/hocance"
                style="@style/activityChip"/>
        </GridLayout>

        <TextView
            android:id="@+id/sports_txt"
            style="@style/activityCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="스포츠" />
        <GridLayout
            android:id="@+id/chipGroup_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/swim"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip10"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/running"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip11"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/bicycle"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/hiking"
                style="@style/activityChip"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip13"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/winterSports"
                style="@style/activityChip"/>
        </GridLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/saveButton"
            android:text="저장" />
    </LinearLayout>
</LinearLayout>