<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainBlue"
            app:layout_collapseMode="pin"
            app:theme="@style/Toolbar">

            <TextView
                android:id="@+id/ToolbarTitle"
                style="@style/ToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Login" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="left"
                android:layout_marginTop="50dp"
                android:src="@drawable/splashicon_airplane_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textStyle="bold"
                android:text="@string/Introduction" />
        </LinearLayout>

        <EditText
            android:id="@+id/loginID"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="EMAIL"
            android:padding="15dp"
            android:nextFocusDown="@id/loginPW"
            android:singleLine="true"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPW"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:hint="PASSWORD"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/login_button"
                android:textColor="@color/white"
                style="@style/loginButton"
                android:text="@string/Login" />

            <Button
                android:id="@+id/gotoSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/login_button"
                style="@style/loginButton"
                android:textColor="@color/white"
                android:text="@string/SignUp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>